@@ -322,6 +322,7 @@ modules.load('priming')
 modules.load('detect_time_skew')
 modules.load('detect_time_jump')
 modules.load('ta_sentinel')
+modules.load('edns_keepalive')
 
 -- Interactive command evaluation
 function eval_cmd(line, raw)
