@@ -1,6 +1,10 @@
 Knot Resolver 3.x.y (201y-mm-dd)
 ================================
 
+New features
+------------
+- module edns_keepalive to implement server side of RFC 7828 (#408)
+
 Module API changes
 ------------------
 - new layer is added: answer_finalize
